apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scas-frontend
  labels:
    app: scas-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scas-frontend
  template:
    metadata:
      labels:
        app: scas-frontend
    spec:
      containers:
        - name: scas-frontend
          image: leeejjju/scas-frontend:09117ebbdba08c7682589680aaa20f3b93494c07
          ports:
            - containerPort: 3000
