apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scas-frontend
spec:
  type: NodePort
  selector:
    app: scas-frontend
  ports:
    - port: 80
      targetPort: 3000
