apps/frontend/scas-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scas-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  # - host: "scas.leeejjju.main"  
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scas-frontend    
            port:
              number: 80
